# timnology-youtube

./: .gitignore  README.md
decorators/src/decorators/: level0.py  level3.py
python-ci/: .gitignore  .pre-commit-config.yaml  README.md
python-ci/.github/workflows/: code-quality.yaml
python-ci/tests/python_ci/: test_init.py
videos/decorators/: README.md  pyproject.toml
videos/decorators/src/decorators/: intro.py  level1.py  level2.py
videos/fastapi-logging/: 01-basic-logging.py  02-loguru.py  03-prod.py  pyproject.toml
videos/python-ci/: coverage.xml
videos/python-ci/.github/actions/setup/: action.yaml
videos/python-ci/src/python_ci/: __init__.py
videos/scalable-python-api/: README.md
