[project]
name = "decorators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim van Cann", email = "timvancann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
